fix overflow-x to hidden

--- a/src/app/test-home/test-home.component.css
+++ b/src/app/test-home/test-home.component.css
@@ -48,6 +48,7 @@ h1 , h3 {
 /*  */
 
 .aboutus-wrapper {
+    overflow-x: hidden;
     width: 100vw;
     background: #ffffff;
     padding: 4rem 0;
@@ -59,6 +60,7 @@ p, li {
     font-size: 24px;
     font-weight: initial;
     color: #A1A1A1;
+    padding: 0px 17rem;
 }
 h2 {
     font-weight: bolder;
@@ -73,7 +75,7 @@ h2 {
     color: #7d7d7d;
 }
 .logo {
-    margin-top: 5rem;
+    margin: 5rem 0;
     text-align: center;
     width: 25%;
     border-radius: 50%;
@@ -194,10 +196,14 @@ h2 {
         font-size: 24px;
     }
     p, li {
-        font-size: 10px;
+        font-size: 12px;
+        padding: 0 2rem;
     }
     .logo {
-        margin-top: 1rem;
+        margin: 3rem 0;
+    }
+    .hr-line {
+        margin: 0 7rem;
     }
 }
 
@@ -217,9 +223,13 @@ h2 {
     }
     p, li {
         font-size: 12px;
+        padding: 0 2rem;
     }
     .logo {
-        margin-top: 1rem;
+        margin: 3rem 0;
+    }
+    .hr-line {
+        margin: 0 7rem;
     }
    
 }
